--- a/src/assets/body2.css
+++ b/src/assets/body2.css
@@ -6,4 +6,5 @@ box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 backdrop-filter: blur(5px);
 -webkit-backdrop-filter: blur(5px);
 border: 1px solid rgba(255, 255, 255, 0.3);
+padding: 1rem 0 0 3rem;
 }
