--- a/src/assets/header.css
+++ b/src/assets/header.css
@@ -18,6 +18,7 @@
 
 .PageLogo h1 {
     padding: 0 0 0 1rem;
+    margin-top: 15px;
     color: #010b1a;
     font-size: 2.5rem;
     font-weight: bold;
@@ -98,7 +99,6 @@ transition: all 0.5s ease;
     border-radius: 15px;
     color: #f5f5f5;
 }
-
 @media (max-width: 768px) {
     .mobile-menu-button {
         display: block;
